# KasaEnergyLogger

./: .gitignore  CMakeLists.txt  KasaEnergyLogger.sln  KasaEnergyLogger.vcxproj  README.md  kasaenergylogger.cpp  makefile  mrtg.cfg
KasaEnergyLogger/DEBIAN/: control  postinst  postrm  prerm
KasaEnergyLogger/etc/systemd/system/: kasaenergylogger.service
KasaEnergyLogger/usr/local/lib/systemd/system/: kasaenergylogger.service
